tests/test-dirs/upstream-typing-recovery/original-tests/no_value_clause.compilers.reference
File "no_value_clause.ml", line 1:
Error: Multiple errors were encountered
File "no_value_clause.ml", lines 10-11, characters 10-29:
10 | ..........match x with
11 |   | exception Not_found -> 12
  None of the patterns in this match expression match values.
File "no_value_clause.ml", lines 16-18, characters 10-30:
16 | ..........match x with
17 |     | exception Not_found -> 1
18 |     | exception Failure _ -> 2
  None of the patterns in this match expression match values.
File "no_value_clause.ml", line 21, characters 17-27:
21 | let t : string = x + (g 10)
                      ^^^^^^^^^^
  This expression has type int but an expression was expected of type string
